# prescient-data-engineering

./: .env  docker-compose.yml  pyproject.toml  readME.md
dbt/: .user.yml  dbt_project.yml  profiles.yml  selectors.yml
dbt/macros/: generate_schema_name.sql
dbt/macros/gates/: add_dependencies.sql  execute_tests.sql
dbt/macros/tests/: validation_checks.sql
dbt/models/: sources.yml
dbt/models/weather_forecast/: schema.yml  weather_forecast.sql  weather_forecast_canonical.sql  weather_forecast_cardinal.sql  weather_forecast_dedup.sql  weather_forecast_pre_release_tests.sql  weather_forecast_unnest.sql
ingests/: openweather.yaml
sql/: 001_init.sql
src/: cli.py  config.py
src/core/: job_runner.py  locks.py  logging.py
src/db/: engine.py  repository.py
src/ingest/: base.py  registry.py
src/ingest/openweather/: client.py  ingest.py  openweather.yaml
src/registries/: ingests.yml  transforms.yml
src/scheduler/: cron_runner.py
src/transform/: base.py  dbt_job.py  dbt_runner.py  registry.py
